force-app/main/default/objects/Name_Mapping_Configuration__c/Name_Mapping_Configuration__c.object-meta.xml
<CustomObject>
    <label>Name Mapping Configuration</label>
    <nameField>
        <displayFormat>NMC-{00000000}</displayFormat>
        <label>Name Mapping Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Name Mapping Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>