force-app/main/default/objects/Name_Mapping_Configuration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Name Mapping Configurations</relationshipLabel>
    <relationshipName>Name_Mapping_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>