force-app/main/default/objects/Name_Mapping_Configuration__c/fields/Is_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Is_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Excluded</label>
    <type>Checkbox</type>
</CustomField>