force-app/main/default/objects/Name_Mapping_Configuration__c/fields/Mapped_Value__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Value__c</fullName>
    <label>Mapped Value</label>
    <length>18</length>
    <type>Text</type>
</CustomField>