force-app/main/default/objects/Name_Mapping_Configuration__c/fields/Plant_Product__c.field-meta.xml
<CustomField>
    <fullName>Plant_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Product</label>
    <referenceTo>Plant_Products__c</referenceTo>
    <relationshipLabel>Name Mapping Configurations</relationshipLabel>
    <relationshipName>Name_Mapping_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>