force-app/main/default/objects/Name_Mapping_Configuration__c/fields/SFDC_Value__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Value__c</fullName>
    <label>SFDC Value</label>
    <length>60</length>
    <type>Text</type>
</CustomField>