force-app/main/default/objects/Name_Mapping_Configuration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Name</fullName>
            </value>
            <value>
                <fullName>Billing Account Number</fullName>
            </value>
            <value>
                <fullName>Plant Product Name</fullName>
            </value>
            <value>
                <fullName>User Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>